Added new html views

--- a/views/home.pug
+++ b/views/home.pug
@@ -2,6 +2,13 @@ extends layout
 
 block content
   h1 Hackathon Starter
+
+  include html/splash.html
+  include html/home.html
+  include html/security.html
+  include main.pug
+  
+  
   p.lead A boilerplate for Node.js web applications.
   hr
   .row
